Changed some things, first commit on laptop

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Test Site</title>
+    <title>Nick Turenne</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <img src="images/shadowwizard.jpg">
     <br> <!--Line Break-->
-    <h1 class="top">Wizards</h1>
+    <h1 class="top">Nick Turenne</h1>
     <a href="https://www.youtube.com/watch?v=dcFCdLsRPVo"
-    target="_blank"
-    title="Wizard magic">
-    Become Wizard
+    target="_blank" 
+    title="This is a test"> <!--_blank opens the link in a new tab-->
+    Link Test
     </a>
     <hr> <!--Horizaontal Rule-->
   </body>
