--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <img src="images/shadowwizard.jpg">
+    <img src="images/headshot.jpg" class="center">
     <br> <!--Line Break-->
+
     <h1 class="top">Nick Turenne</h1>
-    <a href="https://www.youtube.com/watch?v=dcFCdLsRPVo"
+
+    <h2 class="description">Computing Science Student at Simon Fraser University</h2>
+
+    <br>
+
+    <a href="https://www.youtube.com/"
     target="_blank" 
     title="This is a test"> <!--_blank opens the link in a new tab-->
     Link Test
     </a>
+
     <hr> <!--Horizaontal Rule-->
+    
   </body>
 </html>
