Updated personal site with about section and updated profile image

--- a/index.html
+++ b/index.html
@@ -7,22 +7,30 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <img src="images/headshot.jpg" class="center">
-    <br> <!--Line Break-->
+    <div class="description">
+      <img src="images/dressed_far.jpg" class="center">
+      <br> <!--Line Break-->
+      <h1 class="top">Nick Turenne</h1>
+      <b>4th year Computing Science Student at Simon Fraser University</b>
+      <br><br>
+      <hr> <!--Horizaontal Rule-->
+    </div>
 
-    <h1 class="top">Nick Turenne</h1>
-
-    <h2 class="description">Computing Science Student at Simon Fraser University</h2>
-
-    <br>
-
-    <a href="https://www.youtube.com/"
+    <div class="about">
+      <h1 class="header">About</h1>
+      <b>My name is Nick Turenne and I am 4th year computing science student at SFU. I have a passion for learning and all things computers including, software development, game development, data science, computer hardware, AI, and more. 
+        Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with python and ever since I have been hooked.
+        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 404: Cryptography; CMPT 300: Operating Systems; CMPT 362: Mobile Application Developement; and CMPT 410: Machine Learning.
+      </b>
+      <br><br>
+      <hr>
+    </div>
+    <a href="https://github.com/NickTurenne"
     target="_blank" 
-    title="This is a test"> <!--_blank opens the link in a new tab-->
-    Link Test
+    title="GitHub"> <!--_blank opens the link in a new tab-->
+    GitHub
     </a>
 
-    <hr> <!--Horizaontal Rule-->
     
   </body>
 </html>
