continued to work on it

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="description">
+    <div id="description" class="description">
       <img src="images/dressed_far.jpg" class="center">
       <br> <!--Line Break-->
       <h1 class="top">Nick Turenne</h1>
@@ -16,7 +16,7 @@
       <hr> <!--Horizaontal Rule-->
     </div>
 
-    <div class="about">
+    <div id="about">
       <h1 class="header">About</h1>
       <b>My name is Nick Turenne and I am 4th year computing science student at SFU. I have a passion for learning and all things computers including, software development, game development, data science, computer hardware, AI, and more. 
         Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with python and ever since I have been hooked.
@@ -25,11 +25,27 @@
       <br><br>
       <hr>
     </div>
-    <a href="https://github.com/NickTurenne"
-    target="_blank" 
-    title="GitHub"> <!--_blank opens the link in a new tab-->
-    GitHub
-    </a>
+
+    <div id="projects">
+      <h1 class="header">Projects</h1>
+      <br><br>
+      <hr>
+    </div>
+
+    <div id="links">
+      <h1 class="header">Links</h1>
+      <a href="https://github.com/NickTurenne"
+      target="_blank" 
+      title="GitHub"> <!--_blank opens the link in a new tab-->
+      -> GitHub
+      </a>
+      <br>
+      <a href="https://www.linkedin.com/in/nick-turenne-356472347/"
+      target="_blank" 
+      title="LinkedIn">
+      -> LinkedIn
+      </a>
+    </div>
 
     
   </body>
