Added some projects to the list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="top">Nick Turenne</h1>
       <b>4th year Computing Science Student at Simon Fraser University</b>
       <br><br>
-      <hr> <!--Horizaontal Rule-->
+      <hr> 
     </div>
 
     <div id="about">
@@ -28,25 +28,44 @@
 
     <div id="projects">
       <h1 class="header">Projects</h1>
-      <br><br>
+      <ul class="titleList">
+        <li>Beyond the Quintessence
+          <ul class="subList">
+            <li><img src="images/BTQ.png" class="subImage"></li>
+            <li>November 2022 - Present</li>
+            <li>Beyond the Quintessence is a roguelike game made using C# and the Unity engine and has been a side project of mine for a while. The game utilizes various object oriented programming patterns, pathfinding algorithms, and procedural generation techniques in order to achieve the desired gameplay loop.
+               The game is available for download on the game sharing website itch.io and has been downloaded and played by users on the site. I still periodically work on and update the game when I have new ideas for content.</li>
+            <li><a href="https://binkusminkus.itch.io/beyond-the-quintessence" target="_blank" title="Beyond the Quintessence">itch.io Page</a></li>
+          </ul>
+        </li>
+        <br>
+        <li>UFC Data Scraper and Visualizer
+          <ul class="subList">
+            <li>February - March 2025</li>
+            <li>This project scrapes UFC fight matchup data for the fighters scheduled on the next UFC event and saves the parsed information in a JSON file. The JSON file is then read and fighter stats are displayed side by side for quick and efficient analysis.</li>
+            <li><a href="https://github.com/NickTurenne/UFC_Data_Scraper" target="_blank" title="UFC Data Scraper and Visualizer">GitHub Page</a></li>
+          </ul>
+        </li>
+        <br>
+        <li>ArtChart
+          <ul class="subList">
+            <li>September - December 2024</li>
+            <li>This was a group project I completed for my class CMPT 362: Mobile Application Developement. ArtChart is an Android app that was developed using Kotlin in Android Studio. The app is designed to be a collection of user submitted street art and public art pieces. 
+              The app allows users to create an account, view submitted artwork using the Google Maps API, submit artwork to the database, and leave reviews for art pieces as well.</li>
+            <li><a href="https://qq-zhong.github.io/artChart_site/" target="_blank" title="ArtChart Website">ArtChart Website</a></li>
+          </ul>
+        </li>
+      </ul>
       <hr>
     </div>
 
     <div id="links">
       <h1 class="header">Links</h1>
-      <a href="https://github.com/NickTurenne"
-      target="_blank" 
-      title="GitHub"> <!--_blank opens the link in a new tab-->
-      -> GitHub
-      </a>
-      <br>
-      <a href="https://www.linkedin.com/in/nick-turenne-356472347/"
-      target="_blank" 
-      title="LinkedIn">
-      -> LinkedIn
-      </a>
+      <ul class="titleList">
+        <li><a href="https://github.com/NickTurenne" target="_blank" title="GitHub">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/nick-turenne-356472347/" target="_blank" title="LinkedIn">LinkedIn</a></li>
+      </ul>
     </div>
-
-    
+  
   </body>
 </html>
