Added some more photos and tweaked some parts.

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
             <li>Beyond the Quintessence is a roguelike game made using C# and the Unity engine and has been a side project of mine for a while. The game utilizes various object oriented programming patterns, pathfinding algorithms, and procedural generation techniques in order to achieve the desired gameplay loop.
                The game is available for download on the game sharing website itch.io and has been downloaded and played by users on the site. I still periodically work on and update the game when I have new ideas for content.</li>
             <li><a href="https://binkusminkus.itch.io/beyond-the-quintessence" target="_blank" title="Beyond the Quintessence">itch.io Page</a></li>
+            <li><iframe frameborder="0" src="https://itch.io/embed/3229737?linkback=true&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=510c92" width="552" height="167"><a href="https://binkusminkus.itch.io/beyond-the-quintessence">Beyond The Quintessence by BinkusMinkus</a></iframe></li>
           </ul>
         </li>
         <br>
         <li>UFC Data Scraper and Visualizer
           <ul class="subList">
+            <li><img src="images/Figure_1.png" class="subImage"></li>
             <li>February - March 2025</li>
             <li>This project scrapes UFC fight matchup data for the fighters scheduled on the next UFC event and saves the parsed information in a JSON file. The JSON file is then read and fighter stats are displayed side by side for quick and efficient analysis.</li>
             <li><a href="https://github.com/NickTurenne/UFC_Data_Scraper" target="_blank" title="UFC Data Scraper and Visualizer">GitHub Page</a></li>
@@ -64,18 +66,19 @@
       <ul class="titleList">
         <li><a href="https://github.com/NickTurenne" target="_blank" title="GitHub">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/nick-turenne-356472347/" target="_blank" title="LinkedIn">LinkedIn</a></li>
+        <li><a href="Documents/Resume_Nick_Turenne_2025.pdf" download="Resume_Nick_Turenne_2025">Resume</a></li>
       </ul>
       <hr>
     </div>
 
     <div class="header">
-      <p id="date"></p>
+      <p id="copyright"></p>
     </div>
     
     <script>
       const d = new Date();
       let year = d.getFullYear();
-      document.getElementById("date").innerHTML = "©" + year + " All rights reserved.";
+      document.getElementById("copyright").innerHTML = "©" + year + " All rights reserved.";
     </script>
   </body>
 </html>
