Fixed small mistake

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <ul class="titleList">
         <li><a href="https://github.com/NickTurenne" target="_blank" title="GitHub">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/nick-turenne-356472347/" target="_blank" title="LinkedIn">LinkedIn</a></li>
-        <li><a href="Documents/Resume_Nick_Turenne_2025.pdf" download="Resume_Nick_Turenne_2025">Resume</a></li>
+        <li><a href="Documents/Resume_Nick_Turenne_2025.pdf" download="Resume_Nick_Turenne_2025" title="Resume Download">Resume</a></li>
       </ul>
       <hr>
     </div>
