--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <div id="about">
       <h1 class="header">About</h1>
-      <b>My name is Nick Turenne and I am 4th year computing science student at SFU. I have a passion for learning and all things computers including, software development, game development, data science, computer hardware, AI, and more. 
+      <p>My name is Nick Turenne and I am 4th year computing science student at SFU. I have a passion for learning and all things computers including, software development, game development, data science, computer hardware, AI, and more. 
         Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with python and ever since I have been hooked.
         I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 404: Cryptography; CMPT 300: Operating Systems; CMPT 362: Mobile Application Developement; and CMPT 410: Machine Learning.
-      </b>
-      <br><br>
+      </p>
+      <br>
       <hr>
     </div>
 
