--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="header">About</h1>
       <p>My name is Nick Turenne and I am 4th year computing science student at SFU. I have a passion for learning and all things computers including, software development, game development, data science, computer hardware, AI, and more. 
         Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with python and ever since I have been hooked.
-        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 404: Cryptography; CMPT 300: Operating Systems; CMPT 362: Mobile Application Developement; and CMPT 410: Machine Learning.
+        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 404: Cryptography; CMPT 300: Operating Systems; CMPT 362: Mobile Application Development; and CMPT 410: Machine Learning.
       </p>
       <br>
       <hr>
@@ -40,6 +40,15 @@
           </ul>
         </li>
         <br>
+        <li>Blackjack Webpage
+          <ul class="subList">
+            <li><img src="images/blackjack.png" class="subImage"></li>
+            <li>February - March 2025</li>
+            <li>As an avid fan of games, I wanted to create the standard game of blackjack using HTML, CSS, and JavaScript in order to learn JavaScript and test my understanding of HTML and CSS. The wins, losses, and ties are tracked locally. The dealer stands on 16</li>
+            <li><a href="https://nickturenne.github.io/Blackjack_webpage" target="_blank" title="Blackjack!">Blackjack Page</a></li>
+          </ul>
+        </li>
+        <br>
         <li>UFC Data Scraper and Visualizer
           <ul class="subList">
             <li><img src="images/Figure_1.png" class="subImage"></li>
@@ -52,7 +61,7 @@
         <li>ArtChart
           <ul class="subList">
             <li>September - December 2024</li>
-            <li>This was a group project I completed for my class CMPT 362: Mobile Application Developement. ArtChart is an Android app that was developed using Kotlin in Android Studio. The app is designed to be a collection of user submitted street art and public art pieces. 
+            <li>This was a group project I completed for my class CMPT 362: Mobile Application Development. ArtChart is an Android app that was developed using Kotlin in Android Studio. The app is designed to be a collection of user submitted street art and public art pieces. 
               The app allows users to create an account, view submitted artwork using the Google Maps API, submit artwork to the database, and leave reviews for art pieces as well.</li>
             <li><a href="https://qq-zhong.github.io/artChart_site/" target="_blank" title="ArtChart Website">ArtChart Website</a></li>
           </ul>
