Updated resume and fixed typo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <ul class="subList">
             <li><img src="images/blackjack.png" class="subImage"></li>
             <li>February - March 2025</li>
-            <li>As an avid fan of games, I wanted to create the standard game of blackjack using HTML, CSS, and JavaScript in order to learn JavaScript and test my understanding of HTML and CSS. The wins, losses, and ties are tracked locally. The dealer stands on 16</li>
+            <li>As an avid fan of games, I wanted to create the standard game of blackjack using HTML, CSS, and JavaScript in order to learn JavaScript and test my understanding of HTML and CSS. The wins, losses, and ties are tracked locally. The dealer stands on 16.</li>
             <li><a href="https://nickturenne.github.io/Blackjack_webpage" target="_blank" title="Blackjack!">Blackjack Page</a></li>
           </ul>
         </li>
