Updated website with current resume and projects

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <img src="images/dressed_far.jpg" class="center">
       <br> <!--Line Break-->
       <h1 class="top">Nick Turenne</h1>
-      <b>4th year Computing Science Student at Simon Fraser University</b>
+      <b>BSc of Computing Science Graduate From Simon Fraser University</b>
       <br><br>
       <hr> 
     </div>
 
     <div id="about">
       <h1 class="header">About</h1>
-      <p>My name is Nick Turenne and I am 4th year computing science student at SFU. I have a passion for learning and all things computers including, software development, game development, data science, computer hardware, AI, and more. 
-        Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with python and ever since I have been hooked.
-        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 404: Cryptography; CMPT 300: Operating Systems; CMPT 362: Mobile Application Development; and CMPT 410: Machine Learning.
+      <p>My name is Nick Turenne and I am computing science graduate from SFU. I have a passion for learning and all things computers including, data science, AI, software development, game development, computer hardware, and more. 
+        Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with Python and ever since I have been hooked.
+        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 410: Machine Learning; CMPT 404: Cryptography; CMPT 300: Operating Systems; and CMPT 454: Database Systems II.
       </p>
       <br>
       <hr>
@@ -40,19 +40,38 @@
           </ul>
         </li>
         <br>
+        <li>Transcript Analysis
+          <ul class="subList">
+            <li>November 2025 - December 2025</li>
+            <li>Built an end-to-end Python analytics pipeline to analyze academic performance using credit-weighted GPA, department-level comparisons, and time-series trends. Designed clean visualizations and modular analysis code.</li>
+            <li><a href="https://nbviewer.org/github/NickTurenne/Transcript-Analysis/blob/main/notebooks/visualization.ipynb" target="_blank" title="Transcript Analysis">Check out the final analysis!</a></li>
+            <li><a href="https://github.com/NickTurenne/Transcript-Analysis" target="_blank" title="Transcript-Analysis">GitHub Page</a></li>
+          </ul>
+        </li>
+        <br>
+        <li>Student Success Experiment
+          <ul class="subList">
+            <li>May 2025 - August 2025</li>
+            <li>This was a professional project where I collaborated with data scientists to implement a predictive model to identify student success. </li>
+            <li>Performed ETL using SQL and Python on large amounts of student data to achieve a working data set used for model training.</li>
+            <li>Conducted EDA using the Python libraries Pandas and Seaborn to create data visualizations and identify patterns, relationships, and anomalies.</li>
+            <li>Assisted in training and testing several models using the scikit-learn Python library.</li>
+          </ul>
+        </li>
+        <br>
         <li>Blackjack Webpage
           <ul class="subList">
-            <li><img src="images/blackjack.png" class="subImage"></li>
-            <li>February - March 2025</li>
+            <li>February 2025 - March 2025</li>
             <li>As an avid fan of games, I wanted to create the standard game of blackjack using HTML, CSS, and JavaScript in order to learn JavaScript and test my understanding of HTML and CSS. The wins, losses, and ties are tracked locally. The dealer stands on 16.</li>
-            <li><a href="https://nickturenne.github.io/Blackjack_webpage" target="_blank" title="Blackjack!">Blackjack Page</a></li>
+            <li><a href="https://nickturenne.github.io/Blackjack_webpage" target="_blank" title="Blackjack!">Blackjack Game</a></li>
+            <li><a href="https://github.com/NickTurenne/Blackjack_webpage" target="_blank" title="Blackjack_webpage">GitHub Page</a></li>
           </ul>
         </li>
         <br>
         <li>UFC Data Scraper and Visualizer
           <ul class="subList">
             <li><img src="images/Figure_1.png" class="subImage"></li>
-            <li>February - March 2025</li>
+            <li>February 2025 - March 2025</li>
             <li>This project scrapes UFC fight matchup data for the fighters scheduled on the next UFC event and saves the parsed information in a JSON file. The JSON file is then read and fighter stats are displayed side by side for quick and efficient analysis.</li>
             <li><a href="https://github.com/NickTurenne/UFC_Data_Scraper" target="_blank" title="UFC Data Scraper and Visualizer">GitHub Page</a></li>
           </ul>
@@ -60,7 +79,7 @@
         <br>
         <li>ArtChart
           <ul class="subList">
-            <li>September - December 2024</li>
+            <li>September 2024 - December 2024</li>
             <li>This was a group project I completed for my class CMPT 362: Mobile Application Development. ArtChart is an Android app that was developed using Kotlin in Android Studio. The app is designed to be a collection of user submitted street art and public art pieces. 
               The app allows users to create an account, view submitted artwork using the Google Maps API, submit artwork to the database, and leave reviews for art pieces as well.</li>
             <li><a href="https://qq-zhong.github.io/artChart_site/" target="_blank" title="ArtChart Website">ArtChart Website</a></li>
