--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="images/dressed_far.jpg" class="center">
       <br> <!--Line Break-->
       <h1 class="top">Nick Turenne</h1>
-      <b>BSc of Computing Science Graduate From Simon Fraser University</b>
+      <b>Bachelor of Science in Computing Science | Simon Fraser University Alumni</b>
       <br><br>
       <hr> 
     </div>
@@ -19,7 +19,7 @@
     <div id="about">
       <h1 class="header">About</h1>
       <p>My name is Nick Turenne and I am computing science graduate from SFU. I have a passion for learning and all things computers including, data science, AI, software development, game development, computer hardware, and more. 
-        Outside of the classroom I enjoy playing lacrosse for the team at SFU, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with Python and ever since I have been hooked.
+        During my time at SFU, I also played for the club lacrosse team. Outside of the office or school I enjoy fishing, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with Python and ever since I have been hooked.
         I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 410: Machine Learning; CMPT 404: Cryptography; CMPT 300: Operating Systems; and CMPT 454: Database Systems II.
       </p>
       <br>
@@ -29,14 +29,15 @@
     <div id="projects">
       <h1 class="header">Projects</h1>
       <ul class="titleList">
-        <li>Beyond the Quintessence
+        <li>UFC Fight Outcome Predictor
           <ul class="subList">
-            <li><img src="images/BTQ.png" class="subImage"></li>
-            <li>November 2022 - Present</li>
-            <li>Beyond the Quintessence is a roguelike game made using C# and the Unity engine and has been a side project of mine for a while. The game utilizes various object oriented programming patterns, pathfinding algorithms, and procedural generation techniques in order to achieve the desired gameplay loop.
-               The game is available for download on the game sharing website itch.io and has been downloaded and played by users on the site. I still periodically work on and update the game when I have new ideas for content.</li>
-            <li><a href="https://binkusminkus.itch.io/beyond-the-quintessence" target="_blank" title="Beyond the Quintessence">itch.io Page</a></li>
-            <li><iframe frameborder="0" src="https://itch.io/embed/3229737?linkback=true&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=510c92" width="552" height="167"><a href="https://binkusminkus.itch.io/beyond-the-quintessence">Beyond The Quintessence by BinkusMinkus</a></iframe></li>
+            <li>November 2025 - December 2025</li>
+            <li>This is a project where historical UFC fight data is used to train predictive models for fight outcomes and then compare and evaluate the different models trained (Logistic Regression and LightGBM).</li>
+            <li>Built a time-aware UFC fight outcome predictor using LightGBM, preventing data leakage by training only on past fight data incrementally gathered during dataset construction.</li>
+            <li>Engineered matchup advantage features (strike, takedown, submission, control time metrics) for robust model training input</li>
+            <li>Reduced corner bias through fight mirroring and identified model behavior using SHAP feature analysis.</li>
+            <li>This project is a spiritual successor to one of my earlier projects, the UFC Data Scraper and Visualizer</li>
+            <li><a href="https://github.com/NickTurenne/UFC-Fight-Outcome-Predictor" target="_blank" title="UFC-Fight-Outcome-Predictor">GitHub Page</a></li>
           </ul>
         </li>
         <br>
@@ -83,6 +84,17 @@
             <li>This was a group project I completed for my class CMPT 362: Mobile Application Development. ArtChart is an Android app that was developed using Kotlin in Android Studio. The app is designed to be a collection of user submitted street art and public art pieces. 
               The app allows users to create an account, view submitted artwork using the Google Maps API, submit artwork to the database, and leave reviews for art pieces as well.</li>
             <li><a href="https://qq-zhong.github.io/artChart_site/" target="_blank" title="ArtChart Website">ArtChart Website</a></li>
+          </ul>
+        </li>
+        <br>
+        <li>Beyond the Quintessence
+          <ul class="subList">
+            <li><img src="images/BTQ.png" class="subImage"></li>
+            <li>November 2022 - Present</li>
+            <li>Beyond the Quintessence is a roguelike game made using C# and the Unity engine and has been a side project of mine for a while. The game utilizes various object oriented programming patterns, pathfinding algorithms, and procedural generation techniques in order to achieve the desired gameplay loop.
+               The game is available for download on the game sharing website itch.io and has been downloaded and played by users on the site. I still periodically work on and update the game when I have new ideas for content.</li>
+            <li><a href="https://binkusminkus.itch.io/beyond-the-quintessence" target="_blank" title="Beyond the Quintessence">itch.io Page</a></li>
+            <li><iframe frameborder="0" src="https://itch.io/embed/3229737?linkback=true&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=510c92" width="552" height="167"><a href="https://binkusminkus.itch.io/beyond-the-quintessence">Beyond The Quintessence by BinkusMinkus</a></iframe></li>
           </ul>
         </li>
       </ul>
