Updated resume and bio

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div id="about">
       <h1 class="header">About</h1>
-      <p>My name is Nick Turenne and I am computing science graduate from SFU. I have a passion for learning and all things computers including, data science, AI, software development, game development, computer hardware, and more. 
-        During my time at SFU, I also played for the club lacrosse team. Outside of the office or school I enjoy fishing, hiking, reading, and watching MMA/UFC. I began my programming journey in highschool where I learned the fundamentals of programming with Python and ever since I have been hooked.
-        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 410: Machine Learning; CMPT 404: Cryptography; CMPT 300: Operating Systems; and CMPT 454: Database Systems II.
+      <p>My name is Nick Turenne and I am computing science graduate from SFU. I have a passion for learning and all things data, whether that be data science, data analysis, or data engineering. 
+        During my time at SFU, I also played for the club lacrosse team. Outside of the office or school I enjoy fishing, hiking, reading, and watching MMA/UFC. I began my computer science journey in highschool where I learned the fundamentals of programming with Python and ever since I have been hooked.
+        I am an avid learner and enjoy figuring out how various systems and computer related technologies work. Some of my favourite courses I have taken at SFU include: CMPT 410: Machine Learning; CMPT 404: Cryptography; CMPT 354: Database Systems I; and CMPT 454: Database Systems II.
       </p>
       <br>
       <hr>
