Updated to add a new project to site

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
     <div id="projects">
       <h1 class="header">Projects</h1>
       <ul class="titleList">
+        <li>Cycling Sales Data Analysis
+          <ul class="subList">
+            <li>December 2025 - January 2026</li>
+            <li>This is a project that analyzes sales performance across revenue, customers, products, and geography using interactive Tableau dashboards.</li>
+            <li>Built KPI dashboards for revenue, profit, margin, and unit performance.</li>
+            <li>Segmented customers by age and gender to identify high value groups.</li>
+            <li>Analyzed product categories and subcategories for profitability.</li>
+            <li>Visualized geographic trends to guide regional strategy.</li>
+            <li><a href="https://public.tableau.com/app/profile/nicholas.turenne/viz/CyclingSalesDataAnalysis/PerformanceOverview" target="_blank" title="Cycling Sales Data Analysis">Tableau Viz</a></li>
+          </ul>
+        </li>
+        <br>
         <li>UFC Fight Outcome Predictor
           <ul class="subList">
             <li>November 2025 - December 2025</li>
