Updated project description

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         <li>Transcript Analysis
           <ul class="subList">
             <li>November 2025 - December 2025</li>
-            <li>Built an end-to-end Python analytics pipeline to analyze academic performance using credit-weighted GPA, department-level comparisons, and time-series trends. Designed clean visualizations and modular analysis code.</li>
+            <li>Built an end-to-end Python analytics pipeline to analyze academic performance using credit-weighted GPA, department-level comparisons, and time-series trends.</li>
+            <li>Designed a modular data analysis pipeline to clean, analyze, and visualize academic performance data.</li>
+            <li>Engineered weighted GPA and course difficulty metrics using credit-weighted grade points.</li>
+            <li>Compared personal GPA trends against class averages across academic terms using custom visualizations.</li>
             <li><a href="https://nbviewer.org/github/NickTurenne/Transcript-Analysis/blob/main/notebooks/visualization.ipynb" target="_blank" title="Transcript Analysis">Check out the final analysis!</a></li>
             <li><a href="https://github.com/NickTurenne/Transcript-Analysis" target="_blank" title="Transcript-Analysis">GitHub Page</a></li>
           </ul>
